--- a/index.html
+++ b/index.html
@@ -4,15 +4,143 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Franklin Consulting Group</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet"
+  >
+
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
 
-  <header>
-    <h1>Franklin Consulting Group</h1>
-    <p>Student-led consulting at the University of Georgia</p>
+<body>
+  <!-- Navigation -->
+  <nav class="nav">
+    <div class="nav-container">
+      <span class="nav-title">Franklin Consulting Group</span>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#work">What We Do</a></li>
+        <li><a href="#students">Students</a></li>
+        <li><a href="#partners">Partners</a></li>
+        <li><a href="#contact" class="cta">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Applied Learning. Real Projects.</h1>
+      <p>
+        Franklin Consulting Group is a student-led consulting organization within the
+        Franklin College of Arts and Sciences at the University of Georgia.
+      </p>
+    </div>
   </header>
 
-  <script src="js/main.js"></script>
+  <!-- About -->
+  <section id="about" class="section">
+    <div class="section-container">
+      <h2>About Franklin Consulting Group</h2>
+      <p>
+        Franklin Consulting Group (FCG) was established through the Student Government
+        Association to provide structured, client-based experiential learning and applied
+        research opportunities for undergraduate students.
+      </p>
+      <p>
+        The organization centralizes access to real-world projects across the University of
+        Georgia, connecting students with faculty, departments, and partners seeking
+        interdisciplinary, solution-oriented work.
+      </p>
+    </div>
+  </section>
+
+  <!-- What We Do -->
+  <section id="work" class="section alt">
+    <div class="section-container">
+      <h2>What We Do</h2>
+      <ul class="grid">
+        <li>
+          <h3>Client-Based Projects</h3>
+          <p>
+            Website development, student resource platforms, institutional tools,
+            and technical support projects.
+          </p>
+        </li>
+        <li>
+          <h3>Applied Research</h3>
+          <p>
+            Research assistance across the natural sciences, social sciences,
+            humanities, and data-driven initiatives.
+          </p>
+        </li>
+        <li>
+          <h3>Interdisciplinary Cohorts</h3>
+          <p>
+            Small, skill-aligned student teams working under faculty and organizational
+            guidance.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Students -->
+  <section id="students" class="section">
+    <div class="section-container">
+      <h2>For Students</h2>
+      <p>
+        Students selected for Franklin Consulting Group cohorts gain hands-on experience
+        working on real projects, professional skill development, and exposure to
+        interdisciplinary collaboration.
+      </p>
+      <p>
+        Applications are open to all Franklin College students and are evaluated based on
+        skill alignment, interest, and project needs.
+      </p>
+    </div>
+  </section>
+
+  <!-- Partners -->
+  <section id="partners" class="section alt">
+    <div class="section-container">
+      <h2>Faculty & Partners</h2>
+      <p>
+        Franklin Consulting Group collaborates with faculty members, university departments,
+        and campus partners seeking undergraduate involvement in applied initiatives.
+      </p>
+      <p>
+        Partners may propose projects, advise student teams, or contribute to the
+        development of the organization’s project pipeline.
+      </p>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section">
+    <div class="section-container">
+      <h2>Contact</h2>
+      <p>
+        Interested in collaborating or learning more?
+      </p>
+      <p>
+        <strong>Turner Lent</strong><br>
+        Founder, Franklin Consulting Group<br>
+        <a href="mailto:turner.lent@uga.edu">turner.lent@uga.edu</a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>
+      © 2026 Franklin Consulting Group · University of Georgia
+    </p>
+  </footer>
 </body>
 </html>
+<script src="js/main.js"></script>
