--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
 
-  <!-- Mobile + Safari behavior -->
+  <meta charset="UTF-8">
+
+  <!-- Mobile + Safari -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="format-detection" content="telephone=no">
 
   <title>Franklin Consulting Group</title>
+
+  <!-- Favicon / App Icons -->
+  <link rel="icon" type="image/png" href="assets/FCG_Logo_Simple.png">
+  <link rel="apple-touch-icon" href="assets/FCG_Logo_Simple.png">
+  <meta name="theme-color" content="#BA0C2F">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,15 +23,25 @@
     rel="stylesheet"
   >
 
+  <!-- Styles -->
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
 
-  <!-- Navigation -->
+  <!-- ================= Navigation ================= -->
   <nav class="nav" role="navigation" aria-label="Primary">
     <div class="nav-container">
-      <span class="nav-title">Franklin Consulting Group</span>
+
+      <div class="nav-brand">
+        <img
+          src="assets/FCG_Logo_Simple.png"
+          alt="Franklin Consulting Group logo"
+        >
+        <span>Franklin Consulting Group</span>
+      </div>
+
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#work">What We Do</a></li>
@@ -35,23 +49,35 @@
         <li><a href="#partners">Partners</a></li>
         <li><a href="#contact" class="cta">Contact</a></li>
       </ul>
+
     </div>
   </nav>
 
-  <!-- Main App Container -->
-  <main role="main">
+  <!-- ================= Hero ================= -->
+  <header class="hero">
+    <div class="hero-content">
 
-    <!-- Hero -->
-    <header class="hero">
-      <div class="hero-content">
-        <div class="hero-divider"></div>
-        <h1>Applied Learning. Real Projects.</h1>
-        <p>
-          Franklin Consulting Group is a student-led consulting organization within the
-          Franklin College of Arts and Sciences at the University of Georgia.
-        </p>
-      </div>
-    </header>
+      <img
+        src="assets/transparent-logo.png"
+        alt="Franklin Consulting Group Logo"
+        class="hero-logo"
+        loading="eager"
+      >
+
+      <div class="hero-divider"></div>
+
+      <h1>Applied Learning. Real Projects.</h1>
+
+      <p>
+        Franklin Consulting Group is a student-led consulting organization within the
+        Franklin College of Arts and Sciences at the University of Georgia.
+      </p>
+
+    </div>
+  </header>
+
+  <!-- ================= Main Content ================= -->
+  <main role="main">
 
     <!-- About -->
     <section id="about" class="section">
@@ -59,16 +85,13 @@
         <h2>About Franklin Consulting Group</h2>
 
         <p>
-          Franklin Consulting Group (FCG) was established through the Student Government Association.
+          Franklin Consulting Group (FCG) was established through the Student Government Association
+          to provide structured, client-based experiential learning and applied research
+          opportunities for undergraduate students.
         </p>
 
         <p>
-          The organization provides structured, client-based experiential learning and applied
-          research opportunities for undergraduate students.
-        </p>
-
-        <p>
-          FCG centralizes access to real-world projects across the University of Georgia,
+          The organization centralizes access to real-world projects across the University of Georgia,
           connecting students with faculty, departments, and partners seeking interdisciplinary,
           solution-oriented work.
         </p>
@@ -84,23 +107,24 @@
           <li>
             <h3>Client-Based Projects</h3>
             <p>
-              Website development, student resource platforms, institutional tools, and
-              technical support initiatives.
+              Website development, student resource platforms, institutional tools,
+              and technical support initiatives.
             </p>
           </li>
 
           <li>
             <h3>Applied Research</h3>
             <p>
-              Research assistance across the natural sciences, social sciences, humanities,
-              and data-driven initiatives.
+              Research assistance across the natural sciences, social sciences,
+              humanities, and data-driven initiatives.
             </p>
           </li>
 
           <li>
             <h3>Interdisciplinary Cohorts</h3>
             <p>
-              Small, skill-aligned student teams working under faculty and organizational guidance.
+              Small, skill-aligned student teams working under faculty and
+              organizational guidance.
             </p>
           </li>
         </ul>
@@ -132,7 +156,7 @@
     <!-- Partners -->
     <section id="partners" class="section alt">
       <div class="section-container">
-        <h2>Faculty & Partners</h2>
+        <h2>Faculty &amp; Partners</h2>
 
         <p>
           Franklin Consulting Group collaborates with faculty members, university departments,
@@ -151,9 +175,7 @@
       <div class="section-container">
         <h2>Contact</h2>
 
-        <p>
-          Interested in collaborating or learning more?
-        </p>
+        <p>Interested in collaborating or learning more?</p>
 
         <p>
           <strong>Turner Lent</strong><br>
@@ -165,13 +187,13 @@
 
   </main>
 
-  <!-- Footer -->
+  <!-- ================= Footer ================= -->
   <footer class="footer" role="contentinfo">
     <p>© 2026 Franklin Consulting Group · University of Georgia</p>
     <div class="footer-rule"></div>
   </footer>
 
-  <!-- Scroll Reveal Script -->
+  <!-- Optional JS -->
   <script src="js/main.js"></script>
 
 </body>
