--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>About Franklin Consulting Group</h2>
 
         <p>
-          Franklin Consulting Group (FCG) was established through the Student Government Association
+          Franklin Consulting Group (FCG) was established through the 38th Student Government Association
           to provide structured, client-based experiential learning and applied research
           opportunities for undergraduate students.
         </p>
