--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <div class="hero-divider"></div>
 
-      <h1>Applied Learning. Real Projects.</h1>
+      <h1>Applied Learning. Real Results.</h1>
 
       <p>
         Franklin Consulting Group is a student-led consulting organization within the
@@ -95,6 +95,8 @@
           connecting students with faculty, departments, and partners seeking interdisciplinary,
           solution-oriented work.
         </p>
+
+        <a href="about.html" class="learn-more-btn">Learn More</a>
       </div>
     </section>
 
@@ -150,6 +152,8 @@
           Applications are open to all Franklin College students and are evaluated based on
           skill alignment, interest, and project needs.
         </p>
+
+        <a href="students.html" class="learn-more-btn">Learn More</a>
       </div>
     </section>
 
@@ -167,10 +171,12 @@
           Partners may propose projects, advise student teams, or contribute to the development
           of the organization’s project pipeline.
         </p>
+
+        <a href="partners.html" class="learn-more-btn">Learn More</a>
       </div>
     </section>
 
-    <!-- Contact -->
+    <!-- Contact (no button here by design) -->
     <section id="contact" class="section">
       <div class="section-container">
         <h2>Contact</h2>
