--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#work">What We Do</a></li>
+        <li><a href="#work">Our Work</a></li>
         <li><a href="#students">Students</a></li>
         <li><a href="#partners">Partners</a></li>
         <li><a href="#contact" class="cta">Contact</a></li>
