--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
       </div>
     </section>
 
-    <!-- What We Do -->
+    <!-- Our Work -->
     <section id="work" class="section alt">
       <div class="section-container">
-        <h2>What We Do</h2>
+        <h2>Our Work</h2>
 
         <ul class="grid">
           <li>
