mobile title fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
 
-  <title>Franklin Consulting Group | Student-Led Consulting at the University of Georgia</title>
+  <title>Franklin Consulting Group</title>
   <meta name="description" content="Franklin Consulting Group is a student-led consulting organization within the Franklin College of Arts and Sciences at the University of Georgia.">
 
   <link rel="icon" type="image/png" href="assets/FCG_Logo_Simple.png">
