--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <nav class="nav">
   <div class="nav-container">
 
-    <div class="nav-brand">
+    <a href="index.html" class="nav-brand">
       <img src="assets/FCG_Logo_Simple.png" alt="Franklin Consulting Group logo">
       <span>Franklin Consulting Group</span>
-    </div>
+    </a>
+
 
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
