--- a/index.html
+++ b/index.html
@@ -30,17 +30,24 @@
       <span>Franklin Consulting Group</span>
     </a>
 
+    <!-- Hamburger -->
+    <button class="nav-toggle" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
 
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#work">Our Work</a></li>
       <li><a href="#students">Students</a></li>
       <li><a href="#partners">Partners</a></li>
-      <li><a href="#contact" class="cta">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
 
   </div>
 </nav>
+
 
 <!-- ================= Hero ================= -->
 <header class="hero">
