dropdown menu changes

--- a/about.html
+++ b/about.html
@@ -30,6 +30,11 @@
     <span>Franklin Consulting Group</span>
     </a>
 
+    <button class="nav-toggle" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
 
     <ul class="nav-links">
       <li><a href="index.html#about">About</a></li>
