--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <li><a href="#work">Our Work</a></li>
       <li><a href="#students">Students</a></li>
       <li><a href="#partners">Partners</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#contact" class="cta">Contact</a></li>
+
     </ul>
 
   </div>
