--- a/about.html
+++ b/about.html
@@ -65,15 +65,18 @@
     <div class="feature-text">
       <h2>Our Mission</h2>
       <p>
-        Franklin Consulting Group (FCG) was established through the Student Government
+        Franklin Consulting Group was established through the Student Government
         Association to expand access to structured, client-based experiential learning
         within the Franklin College of Arts and Sciences.
       </p>
       <p>
-        The organization connects motivated undergraduate students with faculty,
-        departments, and campus partners seeking interdisciplinary, solution-oriented
-        work across technical, analytical, and organizational domains.
-      </p>
+        With this structure of hands-on learning we intend to permit undergraduate students
+        across all Franklin disciplines to participate in career-oriented projects aligned 
+        with their academic skillsets, reinforcing the growing emphasis on applied learning 
+        and professional preparation in undergraduate education. Through a wide range of skills, 
+        such as computing, politics, entrepreneurship, biological sciences, and laboratory research,
+        we hope to equip students with the foundational proficiencies and practical experiences for 
+        post-graduate careers.
     </div>
 
     <div class="feature-image">
